# GustoBot-v2

./: .dockerignore  .env.example  .env.p0.dashscope.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.p0.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py  models.py
app/answer/: __init__.py  service.py
app/api/: __init__.py  routes.py  sessions.py  (+1 more)
data/: insert_sample_data.sql
docs/: DATASET_EXPANSION_PLAN.md  P0_DASHSCOPE_EXPERIMENT.md  SFT_DATASET_DESIGN.md
reports/: dashscope_router_finetune.json  eval_after_food_data_first_run.json  eval_food_baseline.json  eval_food_generation.json  eval_router_dashscope_sft.json  eval_router_local_sft.json
scripts/: bootstrap_neo4j.py  bootstrap_neo4j_from_postgres.py  check_p0_dashscope_readiness.py  docker_smoke.py  evaluate.py  import_ingredient_taxonomy.py  import_real_recipe_data.py  p0_failure_injection.py  prepare_kb_data.py
tests/: conftest.py  test_answer.py  test_api.py  test_cache.py  test_config_compat.py  test_dashscope_router_finetune.py  test_data_preparation.py  test_docker_smoke.py  test_file_parser.py  test_food_dataset.py  test_food_eval_generation.py  test_food_sft_generation.py  test_graphrag.py  test_graphrag_planner.py  test_ingredient_taxonomy.py  test_kb.py  test_multimodal.py  test_p0_compose.py  test_p0_failure_injection.py  test_p0_readiness.py  test_p0_startup.py  test_router.py  test_router_sft_export.py  test_strict_external_stores.py  test_text2sql.py  test_workflow.py
web/: index.html  package-lock.json  package.json
(+118 files in other folders)
