[project]
name = "gustobot-v2"
version = "0.1.0"
description = "A LangGraph-based multi-route recipe QA system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "langgraph>=1.0.0,<2.0.0",
  "pydantic>=2.0.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "aiofiles>=23.0.0",
  "openpyxl>=3.1.0",
  "pypdf>=4.0.0",
  "PyYAML>=6.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
postgres = [
  "psycopg[binary]>=3.1.0",
]
neo4j = [
  "neo4j>=5.0.0",
]
redis = [
  "redis>=5.0.0",
]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
